# FSGP_BGK

./: .gitignore  README.md  readme.md  setup_ros1.sh  setup_ros2.sh
python/: f_sgp_bgk.py
python/traversability_lib/: choose_point.py  point_cloud_tool.py  sgp_model.py
src/fsgp_bgk/config/: params.yaml
src/fsgp_bgk/python/: node_ros1.py  node_ros2.py
src/fsgp_bgk/python/traversability_lib/: point_cloud_tool.py  traversability.py
src/simulation_env/config/: params.yaml
src/simulation_env/launch/: simulation.launch.py
src/simulation_env/rviz/: simulation.rviz
src/simulation_env/src/: simulated_lidar.cpp
src/simulation_env_ros1/: CMakeLists.txt  package.xml
src/simulation_env_ros1/config/: params.yaml
src/simulation_env_ros1/launch/: simulation.launch
src/simulation_env_ros1/rviz/: simulation.rviz
src/simulation_env_ros1/src/: simulated_lidar.cpp  simulation_node.cpp
src/simulation_env_ros2/: CMakeLists.txt  package.xml
src/simulation_env_ros2/config/: params.yaml
src/simulation_env_ros2/launch/: simulation.launch.py
src/simulation_env_ros2/src/: simulated_lidar.cpp  simulation_node.cpp
