<?xml version="1.0"?>
<package format="2">
  <name>simulation_env_ros1</name>
  <version>0.0.1</version>
  <description>3D robot simulation environment with terrain adaptation for ROS1 Noetic</description>
  <maintainer email="1210339460@qq.com">percyhzy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS core dependencies -->
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Third-party library dependencies -->
  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <export>
  </export>
</package>

